apps/base/dotnet-harmony-api-mock/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-harmony-api-mock
  labels:
    app: dotnet-harmony-api-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-harmony-api-mock
  template:
    metadata:
      labels:
        app: dotnet-harmony-api-mock
    spec:
      imagePullSecrets:
      - name: acrdevglobal-regcred
      containers:
      - name: dotnet-harmony-api-mock
        image: acrdev01global-hudngze7h7hcd6gw.azurecr.io/octave/octave-mockharmonyapi-webapi:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            memory: 512Mi
