apps/base/dotnet-harmony-api-mock/fileservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-harmony-api-mock-fileservice-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: octave-dev.topcon.app
    http:
      paths:
      - path: /fileservice
        pathType: Prefix
        backend:
          service:
            name: dotnet-harmony-api-mock
            port:
              number: 5000
  tls:
  - hosts:
    - octave-dev.topcon.app
    secretName: octave-topconapp-tls
