apps/base/dotnet-harmony-api-mock/harmony-api-mock-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harmony-api-mock-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: octave.example.com
    http:
      paths:
      - path: /fileservice
        pathType: Prefix
        backend:
          service:
            name: dotnet-harmony-api-mock
            port:
              number: 5000
      - path: /harmony
        pathType: Prefix
        backend:
          service:
            name: dotnet-harmony-api-mock
            port:
              number: 5000
  tls:
  - hosts:
    - octave.example.com
    secretName: octave-topconapp-tls
