apps/base/dotnet-harmony-api-mock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-harmony-api-mock-ingress
  annotations:
    haproxy-ingress.github.io/auth-url: "http://oauth2-proxy.octave.svc.cluster.local:4180/oauth2/auth"
    haproxy-ingress.github.io/auth-signin: "https://octave-dev.topcon.app/oauth2/start?rd=%[path]"
    haproxy-ingress.github.io/auth-headers-succeed: "x-auth-request-user,x-auth-request-email"
    # /harmony/<x>  ->  /harmony/<x> on the backend (no rewrite needed).
spec:
  ingressClassName: haproxy
  rules:
  - host: octave-dev.topcon.app
    http:
      paths:
      - path: /harmony
        pathType: Prefix
        backend:
          service:
            name: dotnet-harmony-api-mock
            port:
              number: 5000
  tls:
  - hosts:
    - octave-dev.topcon.app
    secretName: octave-topconapp-tls
